[DEV] install libsnappy before python-snappy

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ branches:
   only:
   - master
 
+before_install:
+  - apt-get install libsnappy-dev
+
 install:
   - pip install -r requirements_test.txt
 
