--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ branches:
   - master
 
 before_install:
-  - apt-get install libsnappy-dev
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libsnappy-dev
 
 install:
   - pip install -r requirements_test.txt
