--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,11 @@ before_install:
 install:
   - pip install -r requirements_test.txt
 
+before_script:
+  - python setup.py install
+
 script:
-- py.test test/test_align.py test/test_dataservice.py test/test_data_basic.py test/test_calendar.py test/test_data_api.py --cov=jaqs
+  - py.test test/test_align.py test/test_dataservice.py test/test_data_basic.py test/test_calendar.py test/test_data_api.py --cov=jaqs
 
 after_success:
   - coveralls
