--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - python setup.py install
 
 script:
-  - py.test test/test_align.py test/test_dataservice.py test/test_data_basic.py test/test_calendar.py test/test_data_api.py --cov=jaqs
+  - py.test test/test_util.py --cov=jaqs
 
 after_success:
   - coveralls
