[RLS] prepare for release-0.6.0

--- a/config/data_config.json
+++ b/config/data_config.json
@@ -1,5 +1,5 @@
 {
   "remote.data.address": "tcp://data.tushare.org:8910",
-  "remote.data.username": "Your Username",
-  "remote.data.password": "Your Password"
+  "remote.data.username": "YourTelNumber",
+  "remote.data.password": "YourToken"
 }
