--- a/config/trade_config.json
+++ b/config/trade_config.json
@@ -1,5 +1,5 @@
 {
   "remote.trade.address": "tcp://gw.quantos.org:8901",
-  "remote.trade.username": "Your Username",
-  "remote.trade.password": "Your Password"
+  "remote.trade.username": "YourTelNumber",
+  "remote.trade.password": "YourToken"
 }
